# py-test-fw

./: .gitignore  Dockerfile  Readme.md  output.json  pyproject.toml  pytest.ini  report.html  requirements.txt  test.py
.github/workflows/: runAutomationTests.yml  runtest.yml
core/: __init__.py  commands.py  util.py
core_fw/: util.py
report/: output.json  report.html
report/archive/: output_1698133748.4006596.json
tests/: test.py  test_basic.py
