[tool.poetry]
name = "test-framework"
version = "0.1.0"
description = ""
authors = ["Anoop Simon <Anoop.Simon@health.vic.gov.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.14.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
