[tool.poetry]
name = "test-framework"
version = "0.1.0"
description = ""
authors = ["Anoop Simon <s451421990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.14.0"
pytest = "^7.4.2"
pytest-html-reporter = "^0.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


